# textRecognition

./: .gitignore  CMakeLists.txt  main.cpp
src/: DetectedWord.cpp  DetectedWord.h  ImageLoader.cpp  ImageLoader.h  RecognitionModule.cpp  RecognitionModule.h  TextDetector.cpp  TextDetector.h  TextRecognizer.cpp  TextRecognizer.h  main.cpp  recognitionModule.i
